0.3.1 /
------------------

* Add minified version



0.3.0 / 2012-12-18
------------------

* Fix potentially non-unique generated IDs
* Add batch() method [Raynos]
* Fix a bug where the success handler could be called even if there was an error
* Fix a bug where old IndexedDB implementations were not detected successfully



0.2.1 / 2012-11-20
------------------

* Add error handler to constructor
* Remove support for numeric transaction and cursor types.
* Misc cleanup



0.2.0 / 2012-11-20
------------------

* Start versioning
