@@ -30,7 +30,7 @@
   </p>
 </div>
 
-<script type="text/javascript" src="../../IDBStore.js"></script>
+<script type="text/javascript" src="../../idbstore.js"></script>
 <script type="text/javascript">
 
   function onload () {
