@@ -1,6 +1,7 @@
 0.3.1 /
 ------------------
 
+* lowercase idbstore.js
 * Add minified version
 
 
